# mosaic

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.html  docker-compose.yml  nginx.conf  pyproject.toml
data/: embedded_data.json  sample_data.json
docs/plans/: 2026-02-28-interactive-sidebar-design.md  2026-02-28-interactive-sidebar-implementation.md
src/mosaic/: __init__.py  cli.py  export.py  parser.py  schema.py  server.py
tests/: conftest.py  test_cli.py  test_export.py  test_parser.py  test_schema.py
tests/fixtures/: sample_export.xml
